[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jeff Bendixsen"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [] }
dirs = "5.0.1"
diesel = { version = "2.1.5", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0.0"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = "1.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
